--- a/.gitignore
+++ b/.gitignore
@@ -49,3 +49,4 @@ __pycache__
 
 # Active Learning external repo
 ActiveLearning/certh_integration/231031_mnist/alpha_mix_active_learning/
+temp_data
